# authentik-user-manager

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  README.md  REUSE.toml  pyproject.toml  release-please-config.json  renovate.json5
.github/: release.yml
.github/workflows/: publish.yaml  release-please.yaml  release-vulnerabilities.yaml  test.yaml
auth_user_mgr/: __init__.py  _api.py  _config.py  _email.py  _helpers.py  _user.py  main.py
config/: app.sample.yaml  app.yaml.sample  users.import.sample.csv  users.sample.yaml  users.yaml.sample
config/users.sample/: group2.sample.yaml
templates/: invitation.html.j2
tests/: __init__.py  conftest.py  mock_server.py  test_api.py  test_config.py  test_helpers.py  test_import.py  test_main.py  test_user.py
tests/data/: app.missing_required.yaml  app.simulation.yaml  app.unexpected_keys.yaml  app.wrong_types.yaml  users.duplicates.yaml  users.missing_required.yaml  users.simulation.yaml  users.unexpected_keys.yaml  users.wrong_indent.yaml  users.wrong_indent2.yaml
tests/data/api/: core-groups-GET.json  core-users-GET-filter.json  core-users-GET-id-3.json  core-users-GET-page1.json  core-users-GET-page2.json  core-users-GET.json  flows-instances-GET.json  stages-invitatation-invitations-POST.json  stages-invitation-invitations-GET.json
tests/data/sample/: app.sample.yaml  users.sample.yaml
tests/data/users.unequal/: group1.sample.yaml  group2.sample.yaml
